--- a/index.html
+++ b/index.html
@@ -1,17 +1,166 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>Example</title>
+      <title>Resumption</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
       <!-- Do not add `link` tags-->
-      <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+      <link rel="shortcut icon" type="image/gif" href="public/images/ck.gif">
 
       <!-- Do not add `script` tags-->
       <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
+      <!-- prevent flash of unstyled content before jQuery loads -->
+          <style type="text/css">
+            body {
+            animation: fadein 2s;
+            }
+            @keyframes fadein {
+              from { opacity: 0; }
+              to { opacity: 1; }
+            }
+          </style>
     </head>
     <body>
-      <h1>Browser Template</h1>
+      <header>
+        <h1>Resumption</h1>
+      </header>
+      <!-- Content -->
+
+
+      <!-- end content -->
+
+      <!-- Modal Form -->
+      <!-- invisible when not in use -->
+        <div class="modal fade" id="modalLoginFormDialog" tabindex="-1" role="dialog" aria-labelledby="modalLoginTitle" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="modalLoginTitle">Login</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+
+                    <!-- Login Form -->
+                <form id="modalLoginForm">
+                  <div id="loginFormContent">
+                    <div class="input-group mb-3">
+                      <div class="input-group-prepend">
+                        <span class="input-group-text">@</span>
+                      </div>
+                      <input id="emailField" class="form-control" name="credentials[email]"
+                        type="email" placeholder="E-mail Address" autocomplete="false">
+                    </div>
+                    <div class="input-group mb-3">
+                      <div class="input-group-prepend">
+                        <span class="input-group-text">*</span>
+                      </div>
+                      <input id="passwordField" class="form-control" name="credentials[password]"
+                        type="password" placeholder="Password" autocomplete="false">
+                    </div>
+                  </div>
+                </form>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn theme-button2" data-dismiss="modal">Close</button>
+                <button id="modalLoginSubmitBtn" type="button" class="btn theme-button1 modal-submit" data-target="#modalLoginForm">Submit</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="modal fade" id="modalSignupFormDialog" tabindex="-1" role="dialog" aria-labelledby="modalSignupTitle" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="modalSignupTitle">Sign Up</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <form id="modalSignupForm">
+                  <!-- Sign Up Form -->
+                  <div id="signupFormContent">
+                    <div class="input-group mb-3">
+                      <div class="input-group-prepend">
+                        <span class="input-group-text">@</span>
+                      </div>
+                      <input id="emailField2" class="form-control" name="credentials[email]" type="email" placeholder="E-mail Address" autocomplete="false">
+                    </div>
+
+                    <div class="input-group mb-3">
+                      <div class="input-group-prepend">
+                        <span class="input-group-text">*</span>
+                      </div>
+                      <input id="passwordField2" class="form-control" name="credentials[password]" type="password" placeholder="Password" autocomplete="false">
+                    </div>
+
+                    <div class="input-group mb-3">
+                      <div class="input-group-prepend">
+                        <span class="input-group-text">Confirm</span>
+                      </div>
+                      <input id="passwordConfField" class="form-control" name="credentials[password_confirmation]" type="password" placeholder="Confirm Password" autocomplete="false">
+                    </div>
+
+                  </div>
+                </form>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn theme-button2" data-dismiss="modal">Close</button>
+                <button id="modalSignupSubmitBtn" type="button" class="btn theme-button1 modal-submit" data-target="#modalSignupForm">Submit</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="modal fade" id="modalChangePasswordFormDialog" tabindex="-1" role="dialog" aria-labelledby="modalChangePasswordTitle" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="modalChangePasswordTitle">Change Password</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <form id="modalChangePasswordForm">
+                  <!-- Change Password Form -->
+                  <div id="changePasswordFormContent">
+                    <div class="input-group mb-3">
+                      <div class="input-group-prepend">
+                        <span class="input-group-text">Old Password</span>
+                      </div>
+                      <input id="oldPasswordField" class="form-control" name="passwords[old]" type="password" placeholder="Old Password" autocomplete="false">
+                    </div>
+
+                    <div class="input-group mb-3">
+                      <div class="input-group-prepend">
+                        <span class="input-group-text">New Password</span>
+                      </div>
+                      <input id="newPasswordField" class="form-control" name="passwords[new]" type="password" placeholder="New Password" autocomplete="false">
+                    </div>
+
+                    <div class="input-group mb-3">
+                      <div class="input-group-prepend">
+                        <span class="input-group-text">Re-type New Password</span>
+                      </div>
+                      <input id="newPasswordField2" class="form-control" type="password" placeholder="New Password" autocomplete="false">
+                    </div>
+
+                  </div>
+                </form>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn theme-button2" data-dismiss="modal">Close</button>
+                <button id="modalChangePasswordSubmitBtn" type="button" class="btn theme-button1 modal-submit" data-target="#modalChangePasswordForm">Submit</button>
+              </div>
+            </div>
+          </div>
+        </div>
     </body>
 </html>
