Remove extra menu buttons

--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
           <div class="button-group">
             <button id="btnMyResumes" class="btn btn-outline-primary">My Resumes</button>
             <button id="btnCreateResume" class="btn btn-outline-secondary">New Resume</button>
-            <hr>
+            <!-- <hr>
             <button id="btnSections" class="btn btn-outline-primary">Show Sections</button>
             <button id="btnNewSection" class="btn btn-outline-secondary">New Section</button>
             <hr>
-            <button id="btnTemplates" class="btn btn-outline-primary">Show Templates</button>
+            <button id="btnTemplates" class="btn btn-outline-primary">Show Templates</button> -->
           </div>
         </nav>
         <div id="displayPanel" class="col-md-10 panel">
