Change modal settings

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               </div>
               <div class="modal-body">
                     <!-- Login Form -->
-                <form id="modalLoginForm">
+                <form id="modalLoginForm" class="modal-form">
                   <div id="loginFormContent">
                     <div class="input-group mb-3">
                       <div class="input-group-prepend">
@@ -118,7 +118,7 @@
                 </button>
               </div>
               <div class="modal-body">
-                <form id="modalSignupForm">
+                <form id="modalSignupForm" class="modal-form">
                   <!-- Sign Up Form -->
                   <div id="signupFormContent">
                     <div class="input-group mb-3">
@@ -164,7 +164,7 @@
                 </button>
               </div>
               <div class="modal-body">
-                <form id="modalChangePasswordForm">
+                <form id="modalChangePasswordForm" class="modal-form">
                   <!-- Change Password Form -->
                   <div id="changePasswordFormContent">
                     <div class="input-group mb-3">
