--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
       <!-- Do not add `link` tags-->
       <link rel="shortcut icon" type="image/gif" href="public/images/ck.gif">
 
+      <link rel="stylesheet" type="text/css" href="public/default.css">
+
       <!-- Do not add `script` tags-->
       <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
       <!-- prevent flash of unstyled content before jQuery loads -->
           <style type="text/css">
             body {
-            animation: fadein 2s;
+            animation: fadein 5s;
             }
             @keyframes fadein {
               from { opacity: 0; }
