reload cdn scripts

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
       <title>Resumption</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
-      <!-- Do not add `link` tags-->
       <link rel="shortcut icon" type="image/gif" href="public/images/ck.gif">
 
       <link rel="stylesheet" type="text/css" href="public/default.css">
-      <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
 
-      <!-- Do not add `script` tags-->
+      <!-- Simple MDE drop-in -->
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
       <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
+
       <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
       <!-- prevent flash of unstyled content before jQuery loads -->
