remove default stylesheet

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <!-- Do not add `link` tags-->
       <link rel="shortcut icon" type="image/gif" href="public/images/ck.gif">
 
-      <link rel="stylesheet" type="text/css" href="public/default.css">
+      <!-- <link rel="stylesheet" type="text/css" href="public/default.css"> -->
 
       <!-- Do not add `script` tags-->
       <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
