--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
       <!-- Do not add `link` tags-->
-      <link rel="shortcut icon" type="image/gif" href="public/images/ck.gif">
+      <link rel="shortcut icon" type="image/gif" href="public/images/resumpt1.png">
 
       <!-- <link rel="stylesheet" type="text/css" href="public/default.css"> -->
 
@@ -27,7 +27,8 @@
       <header class="row">
         <div class="col-md-6 panel-wrapper">
           <div id="titlePanel" class="panel">
-            <h1>Resumption</h1>
+            <h1>
+              <img class="logo" src="public/images/resumpt1.png" alt="Logo">Resumption</h1>
             <div id="userMessage"></div>
           </div>
         </div>
